Mediatek:gmac2 use queue 32

--- a/package/mtk/applications/luci-app-eqos-mtk/po/templates/eqos.pot
+++ b/package/mtk/applications/luci-app-eqos-mtk/po/templates/eqos.pot
@@ -32,7 +32,7 @@ msgid "Network speed control service."
 msgstr ""
 
 #: applications/luci-app-eqos/htdocs/luci-static/resources/view/eqos.js:38
-msgid "Speed limit based on IP address(using unique comment which is less than 32 and no equal to 8 will enable hardware QOS)"
+msgid "Speed limit based on IP address(using unique comment less than 32 will enable hardware QOS"
 msgstr ""
 
 #: applications/luci-app-eqos/htdocs/luci-static/resources/view/eqos.js:29
