--- a/package/mtk/applications/luci-app-turboacc-mtk/po/zh_Hans/turboacc.po
+++ b/package/mtk/applications/luci-app-turboacc-mtk/po/zh_Hans/turboacc.po
@@ -13,8 +13,8 @@ msgid "Acceleration Status"
 msgstr "加速状态"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:191
-msgid "Boardcom fullcone"
-msgstr "Boardcom fullcone"
+msgid "Boardcom_FULLCONE_NAT"
+msgstr "Boardcom_FULLCONE_NAT(更低的CPU占用)"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:151
 msgid "Bridge Acceleration"
@@ -58,16 +58,16 @@ msgid "Enable hardware offloading for wired IPv6 connections."
 msgstr "为有线 IPv6 连接启用硬件加速。"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:177
-msgid "Enable ethernet HNAT for MACVLAN"
-msgstr "启用MACVLAN HNAT"
+msgid "Enable ethernet HNAT for MACVLAN WAN device"
+msgstr "启用MACVLAN WAN 设备 HNAT"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:178
 msgid "Enable hardware offloading for macvlan (sing wan only)."
 msgstr "为MACVLAN 连接启用硬件加速(仅支持单WAN)。"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:183
-msgid "HNAT bind rate threshold (pps/s)"
-msgstr "HNAT加速速率阈值(pps/s)"
+msgid "HNAT bind rate threshold (pps)"
+msgstr "HNAT连接速率绑定阈值(pps)"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:184
 msgid "The smaller the threshold, the easier it is for the connection to be accelerated."
@@ -186,5 +186,6 @@ msgid "TurboACC settings"
 msgstr "网络加速设置"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:190
-msgid "xt_FULLCONENAT"
-msgstr "xt_FULLCONENAT"
+msgid "XT_FULLCONE_NAT"
+msgstr "XT_FULLCONE_NAT(更佳的兼容性)"
+
