--- a/package/mtk/applications/luci-app-mtwifi-cfg/po/zh_Hans/mtwifi-cfg.po
+++ b/package/mtk/applications/luci-app-mtwifi-cfg/po/zh_Hans/mtwifi-cfg.po
@@ -28,8 +28,15 @@ msgstr "U-APSD 省电模式"
 msgid "Kick low RSSI station threshold"
 msgstr "弱信号剔除阈值"
 
+
 msgid "Station associate threshold"
 msgstr "弱信号接入阈值"
 
+msgid "only supports mt_wifi driver"
+msgstr "仅支持MTK闭源驱动，漫游域相关参数自动生成无需设置.确认路由器自身lan ip均在同一网段"
+
 msgid "Wireless HWNAT"
 msgstr "无线硬件加速"
+
+msgid "Band Steering"
+msgstr "引导已连接的强信号双频2.4G设备至5G频段"
