--- a/package/mtk/applications/luci-app-mtwifi-cfg/po/zh_Hans/mtwifi-cfg.po
+++ b/package/mtk/applications/luci-app-mtwifi-cfg/po/zh_Hans/mtwifi-cfg.po
@@ -28,6 +28,8 @@ msgstr "U-APSD 省电模式"
 msgid "Kick low RSSI station threshold"
 msgstr "弱信号剔除阈值"
 
-
 msgid "Station associate threshold"
 msgstr "弱信号接入阈值"
+
+msgid "Wireless HWNAT"
+msgstr "无线硬件加速"
